[gd_scene load_steps=3 format=3 uid="uid://bbc7g0hsx4obp"]

[ext_resource type="Script" path="res://scripts/networking/auth/Login.gd" id="1_fvag3"]
[ext_resource type="Script" path="res://scripts/networking/auth/Register.gd" id="2_e5o7s"]

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Login" type="Control" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -299.0
offset_top = -141.0
offset_right = -21.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fvag3")

[node name="Email" type="RichTextLabel" parent="CanvasLayer/Control/Panel/Login"]
layout_mode = 0
offset_top = 82.0
offset_right = 140.0
offset_bottom = 106.0
text = "Email"

[node name="Password" type="RichTextLabel" parent="CanvasLayer/Control/Panel/Login"]
layout_mode = 0
offset_left = -1.0
offset_top = 161.0
offset_right = 139.0
offset_bottom = 185.0
text = "Password
"

[node name="EmailText" type="LineEdit" parent="CanvasLayer/Control/Panel/Login"]
layout_mode = 0
offset_top = 111.0
offset_right = 263.0
offset_bottom = 142.0

[node name="PasswordText" type="LineEdit" parent="CanvasLayer/Control/Panel/Login"]
layout_mode = 0
offset_left = -1.0
offset_top = 196.0
offset_right = 262.0
offset_bottom = 227.0

[node name="Login" type="Button" parent="CanvasLayer/Control/Panel/Login"]
layout_mode = 0
offset_left = 2.0
offset_top = 247.0
offset_right = 263.0
offset_bottom = 298.0
text = "Login"

[node name="Register" type="Control" parent="CanvasLayer/Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -140.0
offset_right = 283.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_e5o7s")

[node name="Username" type="RichTextLabel" parent="CanvasLayer/Control/Panel/Register"]
layout_mode = 0
offset_right = 140.0
offset_bottom = 24.0
text = "User Name"

[node name="Email" type="RichTextLabel" parent="CanvasLayer/Control/Panel/Register"]
layout_mode = 0
offset_top = 82.0
offset_right = 140.0
offset_bottom = 106.0
text = "Email"

[node name="Password" type="RichTextLabel" parent="CanvasLayer/Control/Panel/Register"]
layout_mode = 0
offset_left = -1.0
offset_top = 161.0
offset_right = 139.0
offset_bottom = 185.0
text = "Password
"

[node name="UsernameText" type="LineEdit" parent="CanvasLayer/Control/Panel/Register"]
layout_mode = 0
offset_top = 29.0
offset_right = 263.0
offset_bottom = 60.0

[node name="EmailText" type="LineEdit" parent="CanvasLayer/Control/Panel/Register"]
layout_mode = 0
offset_top = 111.0
offset_right = 263.0
offset_bottom = 142.0

[node name="PasswordText" type="LineEdit" parent="CanvasLayer/Control/Panel/Register"]
layout_mode = 0
offset_left = -1.0
offset_top = 196.0
offset_right = 262.0
offset_bottom = 227.0

[node name="Register" type="Button" parent="CanvasLayer/Control/Panel/Register"]
layout_mode = 0
offset_left = 2.0
offset_top = 247.0
offset_right = 263.0
offset_bottom = 298.0
text = "Register
"

[connection signal="button_down" from="CanvasLayer/Control/Panel/Login/Login" to="CanvasLayer/Control/Panel/Login" method="_on_login_button_down"]
[connection signal="button_down" from="CanvasLayer/Control/Panel/Register/Register" to="CanvasLayer/Control/Panel/Register" method="_on_register_button_down"]
